--- a/index.html
+++ b/index.html
@@ -8,4 +8,4 @@ exclude_from_nav: true
 {% capture tutoring %} <a href = "{{ site.baseurl }}/tutoring/">Tutoring hours</a> {% endcapture %}
 {% capture assignments %} <a href = "{{ site.baseurl }}/assignments/">hw</a> {% endcapture %}
 
-<p><b>05/10/2020</b>: Welcome to the <b style = "color:darkred"> Virtual Mock Class for Computer Science!</b> Please see the links above for more information. </p>
+<p><b>04/22/2023</b>: Welcome to the <b style = "color:darkred"> Mock Class for Computer Science!</b> Please see the links above for more information. </p>
